; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144.c_ff_irms.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144.c_ff_irms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i32*, i32)* }

@BLOCKSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_irms(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32 (i32*, i32*, i32)*, i32 (i32*, i32*, i32)** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @BLOCKSIZE, align 4
  %13 = call i32 %9(i32* %10, i32* %11, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ff_t_sqrt(i32 %18)
  %20 = ashr i32 %19, 8
  %21 = sdiv i32 536870912, %20
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %17, %16
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @ff_t_sqrt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
